# reddit-llm-alerts

./: .env.example  .gitignore  License.md  README.md  my.env  pyproject.toml
.github/workflows/: ci.yaml
scripts/: run_alerts.py
src/reddit_llm_alerts/: anthropic_client.py  config.py  main.py  models.py  reddit_client.py
tests/: test_anthropic_client.py  test_reddit_client.py  test_run_alerts.py
