[tool.poetry]
name = "reddit-llm-alerts"
version = "0.1.0"
description = "LLM powered alerts for reddit threads"
authors = ["Jascha <bestejascha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
ruff = "^0.5.6"
mypy = "^1.11.1"
pydantic = "^2.8.2"
requests = "^2.31.0"
anthropic = "^0.32.0"
pydantic-settings = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-alerts = "scripts.run_alerts:main"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["reddit_llm_alerts"]