[tool.poetry]
name = "reddit-llm-alerts"
version = "0.1.0"
description = "LLM powered alerts for reddit threads"
authors = ["Jascha <jascha@kviklet.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
ruff = "^0.5.6"
mypy = "^1.11.1"
pydantic = "^2.8.2"
requests = "^2.31.0"
anthropic = "^0.32.0"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-alerts = "scripts.run_alerts:main"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint. per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["reddit_llm_alerts"]